# FAM-AI

./: .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml
.github/workflows/: tests.yml
configs/: default.yaml
docs/: explainer.md
notebooks/: walkthrough.ipynb
outputs/sweep/: summary_table.md  sweep_results.csv
scripts/: plot_results.py  run_baselines.py  run_comparison.py  run_federated.py  run_lira.py  run_mia.py  run_sweep.py
src/: __init__.py
src/attacks/: __init__.py  lira.py  membership_inference.py
src/client/: __init__.py  flower_client.py
src/data-handling/: __init__.py  featurization.py  loader.py
src/models/: __init__.py  gnn.py  training.py
src/privacy/: __init__.py  accountant.py
src/server/: __init__.py  dp_strategy.py  strategy.py
src/utils/: __init__.py
tests/: test_data.py  test_dp.py  test_featurization.py  test_lira.py  test_models.py  test_privacy.py
