[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federated-admet"
version = "0.1.0"
description = "Federated learning for ADMET prediction with GNNs, plus a membership inference attack demo"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "DoctorDean"}]
dependencies = [
    "flwr[simulation]>=1.8.0,<1.21.0",
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "PyTDC>=0.4.0",
    "rdkit>=2023.9.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "dp-accounting>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "ipykernel>=6.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
